[package]
name = "withinbot"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json", "rustls-tls"] }
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

[dependencies.serenity]
version = "0.8"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
