[package]
name = "withinbot"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
kankyo = "0.3"
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
url = "2.1"
xe621 = "0.6.3"
rand = "0"
diesel = { version = "1", features = [ "sqlite" ] }

[dependencies.serenity]
version = "0.8"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[profile.release]
panic = "abort"
lto = true
debug = 0
